# Dusza2024

./: .gitignore  config.toml  readme.md
dusza-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
dusza-frontend/components/: Registration.tsx
dusza-frontend/src/: App.js  App.tsx  Error.d.ts  Error.js  Error.tsx  fonts.scss  index.scss  main.d.ts  main.js  main.tsx
dusza-frontend/src/components/: FormFactory.d.ts  FormFactory.js  FormFactory.tsx  TeamFormConfigs.tsx
dusza-frontend/src/components/form-configs/: Category.tsx  School.tsx  Team.tsx
dusza-frontend/src/components/middle/: MiddlePanel.d.ts  MiddlePanel.js  MiddlePanel.tsx  Overview.d.ts  Overview.js  Overview.tsx
dusza-frontend/src/helpers/: models.d.ts  models.ts  time.d.ts  time.js  time.ts  validation.ts
dusza-frontend/src/routes/: Edit.tsx  Home.js  Home.tsx  Login.js  Login.tsx  Logout.d.ts  Logout.js  Logout.tsx  Registration.d.ts  Registration.js  Registration.tsx
dusza_backend/: Cargo.toml  config_dev.toml  package-lock.json
dusza_backend/src/: auth.rs  category.rs  error.rs  languages.rs  main.rs  schools.rs  teams.rs  user.rs
dusza_backend/src/models/: auth_token.rs  category.rs  lang.rs  mod.rs  school.rs  team.rs  user.rs
frontend/dusza-frontend/: package.json
migrations/: _localhost-2024_11_09_18_10_51-dump.sql  _localhost-2024_11_09_21_10_49-dump.sql  _localhost-2024_11_09_23_28_01-dump.sql  _localhost-2024_11_10_17_47_36-dump.sql  base.sql  db_design_dump.sql
(+86 files in other folders)
