[package]
name = "dusza_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
actix-cors = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio", "chrono", "uuid"] }
derive_more = { version = "1.0.0", features = ["error", "display"] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng", "serde"] }
thiserror = { version = "2.0.1", features = ["default"] }
toml = { version = "0.8.19" }
sha2 = { version = "0.10.8", features = ["default"] }
env_logger = "0.11.5"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["std", "alloc", "clock", "serde", "now"] }
futures = { version = "0.3.31" }
http = "0.2.12"

[profile.dev.package.sqlx-macros]
opt-level = 3